2002-05-29  Mo DeJong  <supermo@bayarea.net>

	* gui/classtreepane.tcl (print): Rename PrintDialog,
	use itk_component(hull) not this, reorder arguments.
	Invoke Window::transient to explicitly set the
	transientfor property for the PrintDialog.
	* gui/dialog.tcl: Remove the poorly named -parent
	option for the Dialog class. A transient window
	should set its master using Window::transient.
	* gui/includepane.tcl (print): Rename PrintDialog,
	use itk_component(hull) not this, reorder arguments.
	Invoke Window::transient to explicitly set the
	transientfor property for the PrintDialog.
	* gui/targetmgr.tcl (edit_target): Invoke the
	Window::transient method instead of using -parent.
	* gui/xrefpane.tcl (print): Rename PrintDialog,
	use itk_component(hull) not this, reorder arguments.
	Invoke Window::transient to explicitly set the
	transientfor property for the PrintDialog.

2002-05-29  Mo DeJong  <supermo@bayarea.net>

	* gui/classpane.tcl:
	* gui/classtreepane.tcl:
	* gui/editorpane.tcl:
	* gui/greppane.tcl:
	* gui/includepane.tcl:
	* gui/makepane.tcl:
	* gui/projedit.tcl:
	* gui/retrieverpane.tcl:
	* gui/xrefpane.tcl: Rework use of $topw member
	variable in pane windows. Use $itk_component(hull)
	instead of namespace tail ${this}. Use the
	-title and -iconname options from the Window class.
	Don't set a default value for topw so we can be sure
	it is set before use. Move itk_initialize in the
	Editor& class after variable initilizations because
	the -filename property invokes editfile. Use $topw
	member instead of makeing another call to wm toplevel.

2002-05-28  Mo DeJong  <supermo@bayarea.net>

	* configure: Regen.
	* configure.in: Don't subst install/Makefile
 	since it no longer exists.
	* mkdist.sh: Use 5.1a2 as tar ball name.
	No need to make a zip file since we require
	Cygwin to do the build.

2002-05-19  Mo DeJong  <supermo@bayarea.net>

	* etc/english.txt.in: Add GrepCanceledString,
	GrepTruncatedString, and GrepFileDoesNotExist.